--- a/.htaccess
+++ b/.htaccess
@@ -25,20 +25,20 @@ RewriteRule ^account/activate/$ views/account/activate.php [L] ###account:activa
 RewriteRule ^account/profile/$ views/account/profile.php [L] ###account:profile###
 
 # api urls
-RewriteRule ^api/login/$ api/login.php [L] ###api:login###
-RewriteRule ^api/profile/$ api/profile.php [L] ###api:profile###
-RewriteRule ^api/register/$ api/register.php [L] ###api:register###
-RewriteRule ^api/forgot-password/$ api/forgot_password.php [L] ###api:forgot_password###
+RewriteRule ^api/login/$ api_views/login.php [L] ###api:login###
+RewriteRule ^api/profile/$ api_views/profile.php [L] ###api:profile###
+RewriteRule ^api/register/$ api_views/register.php [L] ###api:register###
+RewriteRule ^api/forgot-password/$ api_views/forgot_password.php [L] ###api:forgot_password###
 
-RewriteRule ^api/account/program/$ api/account/program.php [L] ###api:account:program###
-RewriteRule ^api/account/shader/$ api/account/shader.php [L] ###api:account:shader###
-RewriteRule ^api/account/snippet/$ api/account/snippet.php [L] ###api:account:snippet###
-RewriteRule ^api/account/shaderpass/$ api/account/shaderpass.php [L] ###api:account:shaderpass###
-RewriteRule ^api/account/activate/$ api/account/activate.php [L] ###api:account:activate###
+RewriteRule ^api/account/program/$ api_views/account/program.php [L] ###api:account:program###
+RewriteRule ^api/account/shader/$ api_views/account/shader.php [L] ###api:account:shader###
+RewriteRule ^api/account/snippet/$ api_views/account/snippet.php [L] ###api:account:snippet###
+RewriteRule ^api/account/shaderpass/$ api_views/account/shaderpass.php [L] ###api:account:shaderpass###
+RewriteRule ^api/account/activate/$ api_views/account/activate.php [L] ###api:account:activate###
 #URLS_PY END#
 
 # deny direct access to api
-RewriteCond %{REQUEST_URI} ^/api/.*$
+RewriteCond %{REQUEST_URI} ^/api_views/.*$
 RewriteCond %{ENV:REDIRECT_STATUS} ^$
 RewriteRule (.*) / [R=404,L,NC]
 
