--- a/.htaccess
+++ b/.htaccess
@@ -36,6 +36,7 @@ RewriteRule ^api/account/snippet/$ api_views/account/snippet.php [L] ###api:acco
 RewriteRule ^api/account/shaderpass/$ api_views/account/shaderpass.php [L] ###api:account:shaderpass###
 RewriteRule ^api/account/renderpass/$ api_views/account/renderpass.php [L] ###api:account:renderpass###
 RewriteRule ^api/account/activate/$ api_views/account/activate.php [L] ###api:account:activate###
+RewriteRule ^api/account/texture/$ api_views/account/texture.php [L] ###api:account:texture###
 #URLS_PY END#
 
 # deny direct access to api
